--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <table>
       <tr>
         <td>
-          <img class="QR-img" src="images/image-qr-code.png" alt="qr-code-img">
+          <a href="https://www.frontendmentor.io"><img class="QR-img" src="images/image-qr-code.png" alt="qr-code-img"></a>
 
           <h2>Improve your front-end skills by building projects</h2>
           <p>
